<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="app_name">Exfilac</string>

  <string name="buckets">Buckets</string>
  <string name="status">Status</string>
  <string name="settings">Settings</string>
  <string name="uploads">Uploads</string>

  <string name="uploadsEmptyMessage0">
    No uploads are currently defined.
  </string>
  <string name="uploadsEmptyMessage1">
    Use the menu above to define new uploads.
  </string>

  <string name="bucketsEmptyMessage0">
    No buckets are currently defined.
  </string>
  <string name="bucketsEmptyMessage1">
    Use the menu above to define new buckets.
  </string>

  <string name="statusEmptyMessage0">
    No uploads are currently defined.
  </string>
  <string name="statusEmptyMessage1">
    Switch to the Uploads tab to configure one or more uploads.
  </string>

  <string name="bucketAccessKey">Access Key</string>
  <string name="bucketAccessKeyDescription">The access key used to access the bucket.</string>
  <string name="bucketAccessStyle">Access Style</string>
  <string name="bucketAccessStyleDescription">The access style for the bucket.</string>
  <string name="bucketAdd">Add bucket</string>
  <string name="bucketAddQR">Add bucket from QR code</string>
  <string name="bucketCreate">Create</string>
  <string name="bucketDeleteConfirm">Are you sure you want to delete the selected buckets?\n\nDeleting buckets will also delete any uploads associated with them.</string>
  <string name="bucketEditCancelConfirm">You have made changes to this bucket configuration. Do you want to save your changes?</string>
  <string name="bucketEditCreate">Create Bucket</string>
  <string name="bucketEditModify">Modify Bucket</string>
  <string name="bucketEditSave">Save Bucket</string>
  <string name="bucketEndpoint">Endpoint</string>
  <string name="bucketEndpointDescription">The base endpoint for the bucket.</string>
  <string name="bucketInvalidURI">Invalid URI.</string>
  <string name="bucketName">Name</string>
  <string name="bucketNameDescription">The name of the bucket on the server.</string>
  <string name="bucketRefName">Reference Name</string>
  <string name="bucketRefNameDescription">A unique name that will be used to refer to this bucket.</string>
  <string name="bucketRefNameTaken">A bucket already exists with this name.</string>
  <string name="bucketRegion">Region</string>
  <string name="bucketRegionDescription">The name of the region within which this bucket resides.</string>
  <string name="bucketRemove">Remove bucket(s)</string>
  <string name="bucketSecret">Secret Key</string>
  <string name="bucketSecretDescription">The secret key used to access the bucket.</string>

  <string name="cancel">Cancel</string>
  <string name="create">Create</string>
  <string name="delete">Delete</string>
  <string name="modify">Modify</string>

  <string name="editFieldsNotValid">One or more fields do not have valid values. Please correct these before attempting to save.</string>

  <string name="uploadAdd">Add upload</string>
  <string name="uploadBucket">Bucket</string>
  <string name="uploadBucketDescription">The bucket to which files will be uploaded.</string>
  <string name="uploadDeleteConfirm">Are you sure you want to delete the selected upload configurations?</string>
  <string name="uploadEditCreate">Create Upload</string>
  <string name="uploadEditModify">Modify Upload</string>
  <string name="uploadEditSave">Save Upload</string>
  <string name="uploadEditCancelConfirm">You have made changes to this upload configuration. Do you want to save your changes?</string>
  <string name="uploadName">Upload Name</string>
  <string name="uploadNameDescription">A unique name that will be used to refer to this upload.</string>
  <string name="uploadNameTaken">An upload already exists with this name.</string>
  <string name="uploadPath">Device Directory</string>
  <string name="uploadPathDescription">The directory on the device that will be scanned for files to be uploaded.</string>
  <string name="uploadRemove">Remove upload(s)</string>
  <string name="uploadSchedule">Schedule</string>
  <string name="uploadScheduleDescription">The frequency at which the directory will be scanned for file changes.</string>
  <string name="uploadSelectPath">Select Directory…</string>
  <string name="uploadTriggerOnPhoto">A photo was taken.</string>
  <string name="uploadTriggerOnWifi">The network became available.</string>
  <string name="uploadTriggers">Triggers</string>
  <string name="uploadTriggersDescription">The events that will trigger this upload.</string>
  <string name="uploadBucketNotSpecified">No bucket was specified.</string>
  <string name="uploadStartedManually">Upload started manually.</string>
  <string name="uploadStatusDetails">Most recent upload</string>
  <string name="uploadStatusEventCount">%d events logged.</string>

  <string name="discard">Discard</string>
  <string name="saveChanges">Save changes</string>

  <string name="statusRunning">Running…</string>
  <string name="statusNotRunning">Not currently running.</string>
  <string name="statusCompleted">Completed successfully at %s.</string>
  <string name="statusCancelled">Cancelled at %s.</string>
  <string name="statusCancelling">Cancelling…</string>
  <string name="statusFailed">Failed at %s.</string>

  <string name="statusPaused">Uploads are currently paused (see Settings).</string>

  <string name="settingsBuild">Commit</string>
  <string name="settingsNetworking">Networking</string>
  <string name="settingsNetworkingUploadCellular">Allow uploads on cellular connections.</string>
  <string name="settingsNetworkingUploadWifi">Allow uploads on Wi-Fi.</string>
  <string name="settingsPause">Pause uploads.</string>
  <string name="settingsPrivacyPolicy">Privacy Policy</string>
  <string name="settingsSupport">Support</string>
  <string name="settingsUploads">Uploads</string>
  <string name="settingsUserManual">User Manual</string>
  <string name="settingsVersion">Version</string>
  <string name="settingsDumpLogs">Save Logs</string>
  <string name="settingsSavedLogsTo">Saved logs to %s</string>
  <string name="settingsLive">Click to see the live version of this documentation at\nhttps://www.io7m.com/software/exfilac/documentation/index-m.xhtml</string>

  <string name="networkStatusUnavailable">No network.</string>
  <string name="networkStatusCellular">On cellular.</string>
  <string name="networkStatusWifi">On Wi-Fi.</string>

  <string name="time">Time</string>
  <string name="file">File</string>
  <string name="message">Message</string>
  <string name="loremIpsum">
    Nulla in tempor enim. Quisque condimentum augue lectus, in condimentum metus porttitor ac.
    Mauris lacus tortor, imperdiet vel lacus eget, condimentum sodales ligula. Fusce pulvinar magna
    ante, et vehicula tortor placerat sit amet. Vivamus feugiat tempus sem, ut convallis magna
    viverra at. Duis lacus metus, tempus ac sodales id, ultrices at eros. Fusce gravida odio
    ultricies lorem euismod, ac aliquam lectus ullamcorper. Suspendisse in porta elit, et luctus
    elit. Nulla at metus elementum, efficitur nisl eget, sagittis orci. Vestibulum mollis velit a
    mollis tincidunt. Etiam nec condimentum nunc.
  </string>
  <string name="reason">Reason</string>
  <string name="filesRequired">Files (Required)</string>
  <string name="filesSkipped">Files (Skipped)</string>
  <string name="filesUploaded">Files (Uploaded)</string>
  <string name="filesFailed">Files (Failed)</string>
  <string name="uploadId">Upload ID</string>
  <string name="timeStarted">Time Started</string>
  <string name="timeEnded">Time Ended</string>
  <string name="timeDuration">Duration</string>
  <string name="bucket">Bucket</string>

  <string name="notification_title">Exfilac</string>
  <string name="notification_description">Exfilac is running.</string>
  <string name="notification_explanation">
    Due to restrictions in Android, Exfilac requires notifications to be enabled in order to
    reliably run a background service that manages uploads.\n\n
    Exfilac will never send you annoying notifications; they are purely needed because Android
    now requires them for services.\n\n
    Please enable notifications if you want to use scheduled uploads. Only manual uploads will
    work reliably if notifications are disabled.
  </string>
  <string name="notifications_permitted">
    Notifications permitted.
  </string>
  <string name="notifications_denied">
    Notifications denied!
  </string>

</resources>
