<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:orientation="vertical"
  android:layout_margin="16dp"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/uploadHeader"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:text="CREATE / MODIFY"
    android:textSize="20sp" />

  <EditText
    android:id="@+id/uploadName"
    android:layout_marginTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="name"
    android:ems="12"
    android:hint="@string/uploadName"
    android:inputType="text"
    android:text="" />

  <Button
    android:id="@+id/uploadCancel"
    android:layout_marginTop="64dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/cancel" />

  <Button
    android:id="@+id/uploadConfirm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/create" />

</LinearLayout>
