<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/settingsAppBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/settingsAppBar"
      app:logo="@drawable/io7m_24"
      app:title="@string/app_name"
      app:titleMarginStart="@dimen/appBarTitleMarginStart"
      android:layout_width="match_parent"
      android:layout_height="48dp" />

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="?android:attr/listDivider" />
  </com.google.android.material.appbar.AppBarLayout>

  <ScrollView
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/settingsAppBarLayout">

    <LinearLayout
      android:id="@+id/settingsControlsTop"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <!-- Bucket name. -->

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settingsMarginHorizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/settingsMarginHorizontal"
        android:text="@string/settingsNetworking"
        android:textSize="@dimen/settingsHeaderTextSize"
        android:textStyle="bold" />

      <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsUploadCellular"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/settingsMarginHorizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/settingsMarginHorizontal"
        android:text="@string/settingsNetworkingUploadCellular" />

      <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/settingsUploadWIFI"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/settingsMarginHorizontal"
        android:layout_marginEnd="@dimen/settingsMarginHorizontal"
        android:text="@string/settingsNetworkingUploadWifi" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/settingsMarginHorizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/settingsMarginHorizontal"
        android:text="@string/settingsPrivacyPolicy"
        android:textSize="@dimen/settingsHeaderTextSize"
        android:textStyle="bold" />

      <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider" />

    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
