<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="?android:attr/selectableItemBackground"
  android:clickable="true">

  <ImageView
    android:id="@+id/statusDetailIcon"
    android:layout_width="32dp"
    android:layout_height="32dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:clickable="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/status_upload_item_ok" />

  <TableLayout
    android:id="@+id/statusDetailItems"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/statusDetailIcon"
    app:layout_constraintTop_toTopOf="parent">

    <TableRow
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_weight="0"
        android:text="@string/time" />

      <TextView
        android:id="@+id/statusDetailTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        tools:text="@string/loremIpsum" />
    </TableRow>

    <TableRow
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_weight="0"
        android:text="@string/file" />

      <TextView
        android:id="@+id/statusDetailFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        tools:text="@string/loremIpsum" />
    </TableRow>

    <TableRow
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_weight="0"
        android:text="@string/message" />

      <TextView
        android:id="@+id/statusDetailMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        tools:text="@string/loremIpsum" />
    </TableRow>
  </TableLayout>

  <Space
    android:layout_width="wrap_content"
    android:layout_height="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/statusDetailItems" />

  <View
    android:id="@+id/divider"
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
