<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/bucketsAppBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/bucketsAppBar"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      app:logo="@drawable/io7m_24"
      app:title="@string/app_name"
      app:titleMarginStart="@dimen/appBarTitleMarginStart"
      app:menu="@menu/buckets_menu_add" />

    <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="?android:attr/listDivider" />
  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
    android:id="@+id/bucketsListEmpty"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:layout_width="64dp"
      android:layout_height="64dp"
      app:srcCompat="@drawable/bucket_32" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:gravity="center"
      android:text="@string/bucketsEmptyMessage0" />

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:gravity="center"
      android:text="@string/bucketsEmptyMessage1" />
  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/bucketsListView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/bucketsAppBarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
